Fix: Overlapping Element on Mainpage (Impressum)

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1251,6 +1251,8 @@ section {
     #portfolio video {
         width: 75%;
     }
+
+    #buttonContainer
 }
 
 @media (max-width: 480px) {
@@ -1561,7 +1563,7 @@ section {
 
 #buttonContainer {
     width: 100%;
-    height: 100%;
+    height: 83%;
     position: fixed;
     display: flex;
     justify-content: center;
